Remove unwanted code in move button

--- a/HEScoreMicro.UI/src/app/views/water-heater/water-heater.component.html
+++ b/HEScoreMicro.UI/src/app/views/water-heater/water-heater.component.html
@@ -160,7 +160,7 @@
         <button type="button" class="bg-primary btn-style" (click)="onSave()">
           {{ this.waterHeaterForm.value?.id ? "Update" : "Save" }}
         </button>
-        <button type="button" class="bg-secondary btn-style" (click)="goNext()">
+        <button type="button" class="bg-secondary btn-style" (click)="move.emit(true)">
           Next
         </button>
       </div>
