--- a/HEScoreMicro.UI/src/app/views/zone-wall/zone-wall.component.html
+++ b/HEScoreMicro.UI/src/app/views/zone-wall/zone-wall.component.html
@@ -173,7 +173,7 @@
       <button type="button" class="bg-primary btn-style" (click)="onSave()">
         {{ this.zoneWallForm.value?.id ? "Update" : "Save" }}
       </button>
-      <button type="button" class="bg-secondary btn-style" (click)="goNext()">
+      <button type="button" class="bg-secondary btn-style" (click)="move.emit(true)">
         Next
       </button>
     </div>
