--- a/HEScoreMicro.UI/src/app/views/energy-star/energy-star.component.html
+++ b/HEScoreMicro.UI/src/app/views/energy-star/energy-star.component.html
@@ -155,7 +155,7 @@
         <button type="button" class="bg-primary btn-style" (click)="onSave()">
           {{ this.energyStarForm.value?.id ? "Update" : "Save" }}
         </button>
-        <button type="button" class="bg-secondary btn-style" (click)="goNext()">
+        <button type="button" class="bg-secondary btn-style" (click)="move.emit(true)">
           Next
         </button>
       </div>
