--- a/HEScoreMicro.UI/src/app/views/pv-system/pv-system.component.html
+++ b/HEScoreMicro.UI/src/app/views/pv-system/pv-system.component.html
@@ -207,7 +207,7 @@
         <button type="button" class="bg-primary btn-style" (click)="onSave()">
           {{ this.pVSystemForm.value?.id ? "Update" : "Save" }}
         </button>
-        <button type="button" class="bg-secondary btn-style" (click)="goNext()">
+        <button type="button" class="bg-secondary btn-style" (click)="move.emit(true)">
           Next
         </button>
       </div>
